src/yini_test/cases/golden/strict/valid/strings/single-quote-delimiter.strict.yini
@yini strict

^ Strings
key = 'value'

/END
