src/yini_test/cases/golden/strict/invalid/strings/multiline-non-triple-quoted.strict.yini
@yini strict

^ Strings
key = "line one
line two"

/END
